Utilizando HTML básico

--- a/Meu Site de Animes/animes.html
+++ b/Meu Site de Animes/animes.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animes e Mangás</title>
 </head>
+
 <body>
     <ul>
         <li>
@@ -18,34 +20,39 @@
             <a href="indicacoes.html">Contato/Indicações</a>
         </li>
     </ul>
+    <center>
     <h1>Animes e Mangás</h1>
 
     <h2>A Viagem de Chihiro</h2>
-    <p>Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos. Ao descobrir que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu no caminho para a nova cidade, indo parar defronte um túnel aparentemente sem fim, guardado por uma estranha estátua. Curiosos, os pais de Chihiro decidem entrar no túnel e Chihiro vai com eles. Chegam numa cidade sem nenhum habitante e os pais de Chihiro decidem comer a comida de uma das casas, enquanto a menina passeia. Ela encontra com Haku, garoto que lhe diz para ir embora o mais rápido possível e ao reencontrar seus pais, Chihiro fica surpresa ao ver que eles se transformaram em gigantescos porcos. É o início da jornada de Chihiro por um mundo fantasma, povoado por seres fantásticos, no qual humanos não são bem-vindos.</p>
-    <img src="assets/img/Chihiro.jpg" alt="A Viagem de Chihiro">
+    
+        <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\Chihiro.jpg" alt="A Viagem de Chihiro">
+    
+    <p>Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos. Ao descobrir
+        que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu no caminho para a nova
+        cidade, indo parar defronte um túnel aparentemente sem fim, guardado por uma estranha estátua. Curiosos, os pais
+        de Chihiro decidem entrar no túnel e Chihiro vai com eles. Chegam numa cidade sem nenhum habitante e os pais de
+        Chihiro decidem comer a comida de uma das casas, enquanto a menina passeia. Ela encontra com Haku, garoto que
+        lhe diz para ir embora o mais rápido possível e ao reencontrar seus pais, Chihiro fica surpresa ao ver que eles
+        se transformaram em gigantescos porcos. É o início da jornada de Chihiro por um mundo fantasma, povoado por
+        seres fantásticos, no qual humanos não são bem-vindos.</p>
     <h3>Trailer a Viagem de Chihiro</h3>
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/SgZI655GgHk" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen
-    ></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SgZI655GgHk" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
     <h2>Paprika</h2>
-    <p>Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini, que torna possível o acesso aos sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba, psicoterapeuta e pesquisadora de ponta, desenvolve um tratamento psiquiátrico revolucionário a partir do aparelho. Mas, antes de seu uso ser sancionado pelo governo, o DC-Mini é roubado. Quando vários dos pesquisadores do laboratório começam a enlouquecer e a sonhar em estado de vigília, Atsuko assume seu alter-ego, Paprika, a bela “detetive de sonhos”, para mergulhar no mundo do inconsciente e descobrir quem está por trás da tragédia.</p>
-    <img src="assets/img/paprika.jpg" alt="Paprika">
+    <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\paprika.jpg" alt="Paprika">
+    <p>Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini, que torna possível o acesso aos
+        sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba, psicoterapeuta e pesquisadora de ponta, desenvolve um
+        tratamento psiquiátrico revolucionário a partir do aparelho. Mas, antes de seu uso ser sancionado pelo governo,
+        o DC-Mini é roubado. Quando vários dos pesquisadores do laboratório começam a enlouquecer e a sonhar em estado
+        de vigília, Atsuko assume seu alter-ego, Paprika, a bela “detetive de sonhos”, para mergulhar no mundo do
+        inconsciente e descobrir quem está por trás da tragédia.</p>
     <h3>Trailer Paprika</h3>
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/yn7U1KIGeuQ" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen
-    ></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yn7U1KIGeuQ" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </center>
 </body>
+
 </html>
