--- a/Meu Site de Animes/index2.html
+++ b/Meu Site de Animes/index2.html
@@ -18,16 +18,17 @@
             <a href="indicacoes.html">Contato/Indicações</a>
         </li>
     </ul>
+    <center>
     <h1>MangAnimes</h1>
 
     <p>
-        No MangAnimes abordaremos Animes e Mangás com conteúdo em foco em mulheres como protagonistas
+        Aqui abordaremos Animes e Mangás com conteúdo em foco em mulheres como protagonistas
 
     </p>
     <p> 
-        Aqui trataremos de trazer conteúdo de qualidade para todes e estamos abertos para indicações também!
+        E trataremos de trazer conteúdo de qualidade para todes e estamos abertos para indicações também!
     </p>
-    <img src="assets/img/kawaii.jpg" alt="Coelhinho Kawaii">
-    
+    <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\kawaii.jpg" alt="Coelhinho Kawaii">
+</center>
 </body>
 </html>
