--- a/Meu Perfil/index.html
+++ b/Meu Perfil/index.html
@@ -15,6 +15,7 @@
             <a href="contato.html">Contato</a>
         </li>
     </ul>
+    <center>
     <h1>Sobre a Day</h1>
 
     <p>
@@ -23,7 +24,7 @@
     <p>
         Tenho muito apreço pela arte, música e tecnologia. Quando mais nova possuia uma banda... 
     </p>
-    <img src="assets/img/day.jpg" alt="Foto da Criadora do Conteúdo">
+    <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\day.jpg" alt="Foto da Criadora do Conteúdo">
 
     <h2>Vídeo da Antídoto F:</h2>
     <iframe 
@@ -35,6 +36,7 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
     allowfullscreen
     ></iframe>
+</center>
 
 </body>
 </html>
