--- a/Meu Site de Animes/indicacoes.html
+++ b/Meu Site de Animes/indicacoes.html
@@ -18,7 +18,10 @@
             <a href="indicacoes.html">Contato/Indicações</a>
         </li>
     </ul>
+    <center>
     <h1>Entre em contato e indique Animes e Mangás!</h1>
+    <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\Kaka.png" alt="Lobinho Kawaii">
+</center>
     <form >
         <label for="nome">Nome:</label><br>
         <input type="text" id="nome">
@@ -33,7 +36,5 @@
        <br>
        <br>
         <button>Enviar</button>
-        <br>
-        <img src="assets/img/Kaka.png" alt="Lobinho Kawaii">
 </body>
 </html>
