--- a/Meu Site de Animes/indicacoes.html
+++ b/Meu Site de Animes/indicacoes.html
@@ -23,38 +23,44 @@
     </ul>
     <hr>
     <h2 class="center">Entre em contato e indique Animes e Mangás!</h2>
-    <img class="br-50 wh-300 dire-item" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manga contente.gif" alt="Manga Contente">
-
-    <form>
+    <div class="dire-item">
         <div>
-            <label for="nome">Nome:</label><br>
-            <input type="text" id="nome">
-            <br>
-            <br>
-            <label for="email">E-mail:</label><br>
-            <input type="email" id="email">
-            <br>
-            <br>
-            <label for="assunto">Assunto:</label><br>
-            <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-            <br>
-            <br>
-            <button>Enviar</button>
+            <form>
+                <div>
+                    <label for="nome">Nome:</label><br>
+                    <input type="text" id="nome">
+                    <br>
+                    <br>
+                    <label for="email">E-mail:</label><br>
+                    <input type="email" id="email">
+                    <br>
+                    <br>
+                    <label for="assunto">Assunto:</label><br>
+                    <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                    <br>
+                    <br>
+                    <button>Enviar</button>
+                </div>
+            </form>
         </div>
+        <div>
+            <img class="br-50 wh-300" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manga contente.gif" alt="Manga Contente">
+        </div>
+    </div>
 
-        <hr>
-        <footer class="center">
-            <div class="container">
-                <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png" alt="Logo Linkedin"></a>
-                <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png" alt="Logo GitHub">
-                </a>
+    <hr>
+    <footer class="center">
+        <div class="container">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png" alt="Logo GitHub">
+            </a>
 
-            </div>
-            <p>
-                Day Namite &copy;
-            </p>
+        </div>
+        <p>
+            Day Namite &copy;
+        </p>
 
-        </footer>
+    </footer>
 
 
 </body>
