--- a/Meu Site de Animes/animes.html
+++ b/Meu Site de Animes/animes.html
@@ -23,13 +23,13 @@
     </ul>
     <hr>
     <div class="center">
-        <h1>Animes e Mangás</h1>
+        <h1>Animes</h1>
 
         <h2>A Viagem de Chihiro</h2>
 
         <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\Chihiro.jpg" alt="A Viagem de Chihiro">
 
-        <p>Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos. Ao descobrir que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu no caminho para a nova cidade, indo parar defronte
+        <p class="justify">Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos. Ao descobrir que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu no caminho para a nova cidade, indo parar defronte
             um túnel aparentemente sem fim, guardado por uma estranha estátua. Curiosos, os pais de Chihiro decidem entrar no túnel e Chihiro vai com eles. Chegam numa cidade sem nenhum habitante e os pais de Chihiro decidem comer a comida de uma das
             casas, enquanto a menina passeia. Ela encontra com Haku, garoto que lhe diz para ir embora o mais rápido possível e ao reencontrar seus pais, Chihiro fica surpresa ao ver que eles se transformaram em gigantescos porcos. É o início da jornada
             de Chihiro por um mundo fantasma, povoado por seres fantásticos, no qual humanos não são bem-vindos.</p>
@@ -38,17 +38,17 @@
 
         <h2>Paprika</h2>
         <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\paprika.jpg" alt="Paprika">
-        <p>Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini, que torna possível o acesso aos sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba, psicoterapeuta e pesquisadora de ponta, desenvolve um tratamento psiquiátrico revolucionário
+        <p class="justify"> Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini, que torna possível o acesso aos sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba, psicoterapeuta e pesquisadora de ponta, desenvolve um tratamento psiquiátrico revolucionário
             a partir do aparelho. Mas, antes de seu uso ser sancionado pelo governo, o DC-Mini é roubado. Quando vários dos pesquisadores do laboratório começam a enlouquecer e a sonhar em estado de vigília, Atsuko assume seu alter-ego, Paprika, a bela
             “detetive de sonhos”, para mergulhar no mundo do inconsciente e descobrir quem está por trás da tragédia.</p>
         <h3>Trailer Paprika</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/yn7U1KIGeuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/yn7U1KIGeuQ " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
     </div>
     <hr>
-    <footer class="center">
-        <div class="container">
-            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png" alt="Logo Linkedin"></a>
-            <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png" alt="Logo GitHub">
+    <footer class="center ">
+        <div class="container ">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/ " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png " alt="Logo Linkedin "></a>
+            <a href="https://github.com/Day-Namite " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png " alt="Logo GitHub ">
             </a>
 
         </div>
@@ -57,6 +57,8 @@
         </p>
 
     </footer>
+
+    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
 
 </body>
 
