--- a/Meu Site de Animes/index.html
+++ b/Meu Site de Animes/index.html
@@ -26,7 +26,9 @@
     <hr>
 
     <div class="center">
-        <h1>MangAnimes</h1>
+        <h1>
+            <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\MangAnimes.png" alt="Logo">
+        </h1>
         <div class="container">
             <div>
                 <div>
@@ -50,6 +52,8 @@
         </p>
 
     </footer>
+
+    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
 
 </body>
 
