--- a/Meu Site de Animes/indicacoes.html
+++ b/Meu Site de Animes/indicacoes.html
@@ -28,31 +28,31 @@
             <form>
                 <div>
                     <label for="nome">Nome:</label><br>
-                    <input type="text" id="nome">
-                    <br>
+                    <input type="text" id="nome" onkeyup='validarNome()'>
+                    <div id="txtNome"></div>
                     <br>
                     <label for="email">E-mail:</label><br>
-                    <input type="email" id="email">
+                    <input type="email" id="email" onkeyup='validarEmail()'>
+                    <div id="txtEmail"></div>
                     <br>
-                    <br>
-                    <label for="assunto">Assunto:</label><br>
-                    <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-                    <br>
+                    <label for="assunto ">Assunto:</label><br>
+                    <textarea name="assunto " id="assunto " cols="60 " rows="5 "></textarea>
+                    <div id="txtAssunto "></div>
                     <br>
                     <button>Enviar</button>
                 </div>
             </form>
         </div>
         <div>
-            <img class="br-50 wh-300" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manga contente.gif" alt="Manga Contente">
+            <img class="br-50 wh-300 " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manga contente.gif " alt="Manga Contente ">
         </div>
     </div>
 
     <hr>
-    <footer class="center">
-        <div class="container">
-            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png" alt="Logo Linkedin"></a>
-            <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png" alt="Logo GitHub">
+    <footer class="center ">
+        <div class="container ">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/ " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png " alt="Logo Linkedin "></a>
+            <a href="https://github.com/Day-Namite " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png " alt="Logo GitHub ">
             </a>
 
         </div>
@@ -61,6 +61,8 @@
         </p>
 
     </footer>
+
+    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
 
 
 </body>
