Estilizando as páginas do site de animes

--- a/Meu Site de Animes/index.html
+++ b/Meu Site de Animes/index.html
@@ -5,45 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu site de Animes</title>
-    <link rel="stylesheet" href="C:\Users\usuário\Desktop\Fundamentos-Web\assets\css\style.css">
+    <title>Manganimes</title>
+    <link rel="stylesheet" href="../Meu Site de Animes/assets/css/style.css">
 
 </head>
 
 
 <body>
-    <ul id="menu">
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="animes.html">Animes</a>
-        </li>
-        <li>
-            <a href="indicacoes.html">Contato/Indicações</a>
-        </li>
-    </ul>
-    <hr>
+    <!-- Navbar-->
+    <nav>
+        <a href="index.html"><img class="logo" src="../Meu Site de Animes/assets/img/MangAnimes Branco.png" alt="Logo"></a>
+        <ul>
+            <li>
+                <a href="animes.html">Animes</a>
+            </li>
+            <li>
+                <a href="indicacoes.html">Contato/Indicações</a>
+            </li>
+            <li>
+                <a href="sobre.html">Sobre a Autora</a>
+            </li>
+        </ul>
+    </nav>
 
+
+    <!--Rodapé-->
     <div class="center">
         <h1>
-            <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\MangAnimes.png" alt="Logo">
+            <img src="../Meu Site de Animes/assets/img/MangAnimes.png" alt="Logo">
         </h1>
         <div class="container">
             <div>
                 <div>
-                    <img class="br-50 wh-300" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manguinhas.jpg" alt="Manguinhas Fofas">
+                    <img class="br-50 wh-300" src="../Meu Site de Animes/assets/img/manguinhas.jpg" alt="Manguinhas Fofas">
                 </div>
-                <h4> Esse é um site muito fofinho para você conhecer o mundo dos Mangás e Animes.</h4>
+                <h4 class="esp esp2"> Esse é um site muito fofinho para você conhecer o mundo dos Mangás e Animes.</h4>
             </div>
 
         </div>
     </div>
-    <hr>
+
+    <!-- Navbar-->
     <footer class="center">
         <div class="container">
-            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png" alt="Logo Linkedin"></a>
-            <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png" alt="Logo GitHub">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank"><img class="tm" src="../Meu Site de Animes/assets/img/linkedin.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/Day-Namite" target="_blank"><img class="tm" src="../Meu Site de Animes/assets/img/github.png" alt="Logo GitHub">
             </a>
 
         </div>
@@ -53,7 +59,7 @@
 
     </footer>
 
-    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
+    <script src="../Meu Site de Animes/assets/js/script.js"></script>
 
 </body>
 
