--- a/Meu Site de Animes/indicacoes.html
+++ b/Meu Site de Animes/indicacoes.html
@@ -6,24 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indicações/Contato</title>
-    <link rel="stylesheet" href="C:\Users\usuário\Desktop\Fundamentos-Web\assets\css\style.css">
+    <link rel="stylesheet" href="../Meu Site de Animes/assets/css/style.css">
 </head>
 
 <body>
-    <ul id="menu">
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="animes.html">Animes</a>
-        </li>
-        <li>
-            <a href="indicacoes.html">Contato/Indicações</a>
-        </li>
-    </ul>
-    <hr>
-    <h2 class="center">Entre em contato e indique Animes e Mangás!</h2>
-    <div class="dire-item">
+
+    <!-- Navbar-->
+    <nav>
+        <a href="index.html"> <img class="logo" src="../Meu Site de Animes/assets/img/MangAnimes Branco.png" alt="logo"></a>
+        <ul>
+
+            <li>
+                <a href="animes.html">Animes</a>
+            </li>
+            <li>
+                <a href="indicacoes.html">Contato/Indicações</a>
+            </li>
+            <li>
+                <a href="sobre.html">Sobre a Autora</a>
+            </li>
+        </ul>
+    </nav>
+
+
+    <!-- Formulário + Imagem-->
+    <h2 class="center esp2">Entre em contato e indique Animes e Mangás!</h2>
+    <section class="dire-item">
         <div>
             <form>
                 <div>
@@ -44,15 +52,16 @@
             </form>
         </div>
         <div>
-            <img class="br-50 wh-300 " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\manga contente.gif " alt="Manga Contente ">
+            <img class="br-50 wh-300 esp2" src="../Meu Site de Animes/assets/img/manga contente.gif" alt="Manga Contente ">
         </div>
-    </div>
+    </section>
 
-    <hr>
+
+    <!--Rodapé-->
     <footer class="center ">
         <div class="container ">
-            <a href="https://www.linkedin.com/in/daisy-barbosa/ " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png " alt="Logo Linkedin "></a>
-            <a href="https://github.com/Day-Namite " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png " alt="Logo GitHub ">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/" target="_blank "><img class="tm" src="../Meu Site de Animes/assets/img/linkedin.png" alt="Logo Linkedin "></a>
+            <a href="https://github.com/Day-Namite " target="_blank"><img class="tm" src="../Meu Site de Animes/assets/img/github.png" alt="Logo GitHub ">
             </a>
 
         </div>
@@ -62,7 +71,7 @@
 
     </footer>
 
-    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
+    <script src="../Meu Site de Animes/assets/js/script.js"></script>
 
 
 </body>
