--- a/Meu Site de Animes/animes.html
+++ b/Meu Site de Animes/animes.html
@@ -6,49 +6,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animes e Mangás</title>
-    <link rel="stylesheet" href="C:\Users\usuário\Desktop\Fundamentos-Web\assets\css\style.css">
+    <link rel="stylesheet" href="../Meu Site de Animes/assets/css/style.css">
 </head>
 
 <body>
-    <ul id="menu">
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="animes.html">Animes</a>
-        </li>
-        <li>
-            <a href="indicacoes.html">Contato/Indicações</a>
-        </li>
-    </ul>
-    <hr>
-    <div class="center">
-        <h1>Animes</h1>
+    <!-- Navbar-->
+    <nav>
+        <a href="index.html"> <img class="logo" src="../Meu Site de Animes/assets/img/MangAnimes Branco.png" alt="logo"></a>
+        <ul>
 
-        <h2>A Viagem de Chihiro</h2>
+            <li>
+                <a href="animes.html">Animes</a>
+            </li>
+            <li>
+                <a href="indicacoes.html">Contato/Indicações</a>
+            </li>
+            <li>
+                <a href="sobre.html">Sobre a Autora</a>
+            </li>
+        </ul>
+    </nav>
 
-        <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\Chihiro.jpg" alt="A Viagem de Chihiro">
+    <!-- Conteúdo-->
+    <article class="container">
+        <div class="center">
 
-        <p class="justify">Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos. Ao descobrir que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu no caminho para a nova cidade, indo parar defronte
-            um túnel aparentemente sem fim, guardado por uma estranha estátua. Curiosos, os pais de Chihiro decidem entrar no túnel e Chihiro vai com eles. Chegam numa cidade sem nenhum habitante e os pais de Chihiro decidem comer a comida de uma das
-            casas, enquanto a menina passeia. Ela encontra com Haku, garoto que lhe diz para ir embora o mais rápido possível e ao reencontrar seus pais, Chihiro fica surpresa ao ver que eles se transformaram em gigantescos porcos. É o início da jornada
-            de Chihiro por um mundo fantasma, povoado por seres fantásticos, no qual humanos não são bem-vindos.</p>
-        <h3>Trailer a Viagem de Chihiro</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SgZI655GgHk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>A Viagem de Chihiro</h2>
 
-        <h2>Paprika</h2>
-        <img src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\paprika.jpg" alt="Paprika">
-        <p class="justify"> Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini, que torna possível o acesso aos sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba, psicoterapeuta e pesquisadora de ponta, desenvolve um tratamento psiquiátrico revolucionário
-            a partir do aparelho. Mas, antes de seu uso ser sancionado pelo governo, o DC-Mini é roubado. Quando vários dos pesquisadores do laboratório começam a enlouquecer e a sonhar em estado de vigília, Atsuko assume seu alter-ego, Paprika, a bela
-            “detetive de sonhos”, para mergulhar no mundo do inconsciente e descobrir quem está por trás da tragédia.</p>
-        <h3>Trailer Paprika</h3>
-        <iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/yn7U1KIGeuQ " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
-    </div>
-    <hr>
+
+            <img src="../Meu Site de Animes/assets/img/Chihiro.jpg" alt="A Viagem de Chihiro">
+
+
+            <p>Chihiro é uma garota de 10 anos que acredita que todo o universo deve atender aos seus caprichos.</p>
+            <p>Ao descobrir que vai se mudar, ela fica furiosa. Na viagem, Chihiro percebe que seu pai se perdeu</p>
+            <p>no caminho para a nova cidade, indo parar defronte um túnel aparentemente sem fim, guardado por</p>
+            <p>uma estranha estátua. Curiosos, os pais de Chihiro decidem entrar no túnel e Chihiro vai com eles.</p>
+            <p>Chegam numa cidade sem nenhum habitante e os pais de Chihiro decidem comer a comida de uma das</p>
+            <p>casas, enquanto a menina passeia. Ela encontra com Haku, garoto que lhe diz para ir embora o mais</p>
+            <p>rápido possível e ao reencontrar seus pais, Chihiro fica surpresa ao ver que eles se transformaram</p>
+            <p>em gigantescos porcos. É o início da jornada de Chihiro por um mundo fantasma, </p>
+            <p class="esp2">povoado por seres fantásticos, no qual humanos não são bem-vindos.</p>
+
+            <iframe width="400 " height="200 " src="https://www.youtube.com/embed/SgZI655GgHk " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture
+                " allowfullscreen alt="Trailer A viagem de Chihiro" class="bor"></iframe>
+
+
+
+
+            <h2 class="esp">Paprika</h2>
+
+            <img src="../Meu Site de Animes/assets/img/paprika.jpg " alt="Paprika ">
+            <p>Num futuro próximo, o Dr. Tokita inventa um poderoso aparelho chamado DC-Mini,</p>
+            <p>que torna possível o acesso aos sonhos das pessoas. Sua colega, a Dra. Atsuko Chiba,</p>
+            <p>psicoterapeuta e pesquisadora de ponta, desenvolve um tratamento psiquiátrico revolucionário</p>
+            <p>a partir do aparelho. Mas, antes de seu uso ser sancionado pelo governo, o DC-Mini é roubado.</p>
+            <p>Quando vários dos pesquisadores do laboratório começam a enlouquecer e a sonhar</p>
+            <p>em estado de vigília, Atsuko assume seu alter-ego, Paprika, a bela “detetive de sonhos”,</p>
+            <p class="esp2">para mergulhar no mundo do inconsciente e descobrir quem está por trás da tragédia.</p>
+
+
+            <iframe class="bor esp2" width=" 400 " height="200 " src="https://www.youtube.com/embed/yn7U1KIGeuQ " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+
+        </div>
+
+    </article>
+
+    <!--Rodapé-->
     <footer class="center ">
         <div class="container ">
-            <a href="https://www.linkedin.com/in/daisy-barbosa/ " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\linkedin.png " alt="Logo Linkedin "></a>
-            <a href="https://github.com/Day-Namite " target="_blank "><img class="tm " src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\img\github.png " alt="Logo GitHub ">
+            <a href="https://www.linkedin.com/in/daisy-barbosa/ " target="_blank "><img class="tm " src="../Meu Site de Animes/assets/img/linkedin.png " alt="Logo Linkedin "></a>
+            <a href="https://github.com/Day-Namite " target="_blank "><img class="tm" src="../Meu Site de Animes/assets/img/github.png " alt="Logo GitHub ">
             </a>
 
         </div>
@@ -58,7 +85,7 @@
 
     </footer>
 
-    <script src="C:\Users\usuário\Desktop\Fundamentos-Web\assets\js\script.js "></script>
+    <script src="../Meu Site de Animes/assets/js/script.js "></script>
 
 </body>
 
