Exclui códigos e arquivos redundantes

--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InstaDay</title>
-    <link rel="stylesheet" href="../Página Inicial do Instagram/style.css">
+    <link rel="stylesheet" href="../Instagram/style.css">
 </head>
 
 <body>
 
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="../Página Inicial do Instagram/assets/img/Insta.png" alt="smartphones">
+            <img src="../Instagram/assets/img/Insta.png" alt="smartphones">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="../Página Inicial do Instagram/assets/img/logo.png" class="logo" alt="logo instagram">
+                <img src="../Instagram/assets/img/logo.png" class="logo" alt="logo instagram">
                 <div class="profile-photo">
-                    <img src="../Página Inicial do Instagram/assets/img/i.jpg" alt="foto de perfil">
+                    <img src="../Instagram/assets/img/i.jpg" alt="foto de perfil">
                 </div>
                 <a href="#" class="login">Continuar como day_namite</a>
                 <p>Não é day_namite? <a href="#" class="logout">Trocar de conta</a></p>
@@ -41,8 +41,6 @@
             </div>
         </div>
     </div>
-
-    <script src=" "></script>
 
 </body>
 
